backend/vulnerability_analysis/testing/hof1/segments/klee-out-0/messages.txt
KLEE: Using STP solver backend
KLEE: SAT solver: MiniSat
KLEE: Deterministic allocator: Using quarantine queue size 8
KLEE: Deterministic allocator: globals (start-address=0x7f56bb600000 size=10 GiB)
KLEE: Deterministic allocator: constants (start-address=0x7f543b600000 size=10 GiB)
KLEE: Deterministic allocator: heap (start-address=0x7e543b600000 size=1024 GiB)
KLEE: Deterministic allocator: stack (start-address=0x7e343b600000 size=128 GiB)
KLEE: ERROR: libc/string/strcmp.c:34: memory error: out of bound pointer
KLEE: NOTE: now ignoring this error at this location
